Fix Bug 1375947: Add spacing after article content

--- a/kuma/static/styles/components/wiki/structure.scss
+++ b/kuma/static/styles/components/wiki/structure.scss
@@ -3,7 +3,6 @@
 .wiki-main-content {
     background: #fff;
     min-height: 300px;
-    padding-bottom: $grid-spacing;
 }
 
 /* the subnav and quick link column of the layout */
